# cofdtools

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  devenv.nix  devenv.yaml  tailwind.config.js
assets/: tailwind.css
public/: tailwind.css
src/: app.rs  main.rs  router.rs
src/components/: mod.rs
src/views/: books.rs  home.rs  merits.rs  mod.rs
