[package]
name = "cofdtools"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
dioxus = "0.4.0"
dioxus-router = "0.4.1"

directories = "*"
once_cell = "*"
futures = "*"
env_logger = "0.10"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "*"
toml = "*"

anyhow = "*"

cofd-miner = { git = "https://github.com/m00nwtchr/cofd-miner.git" }
cofd-schema = { git = "https://github.com/m00nwtchr/cofd-miner.git" }

# cofd-miner = { path = "../cofd-miner/cofd-miner" }
# cofd-schema = { path = "../cofd-miner/cofd-schema" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.4.0"
